--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.10.0",
     "gulp-concat": "^2.6.1",
+    "gulp-concat-css": "^3.1.0",
     "gulp-uglify": "^3.0.1",
     "gulp-watch": "^5.0.1"
   }
