--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-clean-css": "^3.10.0",
     "gulp-concat": "^2.6.1",
     "gulp-concat-css": "^3.1.0",
+    "gulp-imagemin": "^4.1.0",
     "gulp-uglify": "^3.0.1",
     "gulp-watch": "^5.0.1"
   }
